--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,6 @@
     "outDir": "dist",
     "rootDir": "src"
   },
-  "include": ["src/index.ts", "src/**/*"],
+  "include": ["src"],
   "exclude": ["tests", "**/*.config.ts", "node_modules"]
 }
